Personalisation & Design Updates

--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,14 @@
 
 /* Variables (Colour) */
 :root {
-    --main-color: #2026b2;
+    --main-color: #ff7a63;
     --blue: #0000ff;
     --blue-dark: #18293c;
     --orange: #ffa500;
     --green-yellow: #cddc39;
     --pink-light: #efa2b4;
+    --small-biz-dark: #63a4ff;
+    --small-biz-light: #83eaf1;
     --cyan-light: #aef1ee;
     --white: #ffffff;
     --white-alpha-40: rgba(255, 255, 255, 0.40);
@@ -31,7 +33,8 @@
 
 body {
     min-height: 100vh;
-    background-image: linear-gradient(to bottom right, var(--pink-light), var(--cyan-light));
+    background-image: linear-gradient(to bottom right, var(--small-biz-dark), var(--small-biz-light));
+    /* background-image: linear-gradient(to bottom right, var(--pink-light), var(--cyan-light)); */
     background-attachment: fixed;
     font-size: 16px;
     font-family: 'Manrope', sans-serif;
@@ -176,7 +179,7 @@ button {
     padding: 10px 28px;
     display: inline-block;
     border-radius: 30px;
-    color: var(--main-color);
+    color: var(--blue-dark);
     font-weight: 500;
     text-transform: capitalize;
     font-family: inherit;
@@ -729,6 +732,12 @@ button {
 
 .about-text .timeline-item h4 span {
     font-weight: 400;
+    font-style: italic;
+}
+
+.about-text .timeline-item span {
+    font-weight: bold;
+    font-style: italic;
 }
 
 .about-text .btn {
@@ -851,8 +860,12 @@ button {
 }
 
 .pp-body .general-info li a{
-    text-transform: lowercase;
+    text-transform: capitalize;
     color: var(--main-color);
+}
+
+.pp-body .general-info li a:hover {
+    color: white;
 }
 
 /* Contact Section */
